Am facut tema 5

--- a/angular-js-app/index.html
+++ b/angular-js-app/index.html
@@ -97,11 +97,11 @@
         <table>
        <tr>
         <td>ID</td>
-        <td><input type="text" ng-model="editPerson.id"></td>
+        <td><input type="text" class="form-control" ng-model="editPerson.id"></td>
        </tr>
        <tr>
          <td>Name</td>
-         <td><input type="text" ng-model="editPerson.name"></td>
+         <td><input type="text" class="form-control" ng-model="editPerson.name"></td>
        </tr>
        <tr>
          <td colspan="2">
@@ -171,11 +171,11 @@
         <table>
        <tr>
         <td>ID</td>
-        <td><input type="text" ng-model="editMasina.id"></td>
+        <td><input type="text" class="form-control" ng-model="editMasina.id"></td>
        </tr>
        <tr>
          <td>Name</td>
-         <td><input type="text" ng-model="editMasina.name"></td>
+         <td><input type="text" class="form-control" ng-model="editMasina.name"></td>
        </tr>
        <tr>
          <td colspan="2">
@@ -247,11 +247,11 @@
         <table>
        <tr>
         <td>ID</td>
-        <td><input type="text" ng-model="editAnimal.id"></td>
+        <td><input type="text" class="form-control" ng-model="editAnimal.id"></td>
        </tr>
        <tr>
          <td>Name</td>
-         <td><input type="text" ng-model="editAnimal.name"></td>
+         <td><input type="text" class="form-control" ng-model="editAnimal.name"></td>
        </tr>
        <tr>
          <td colspan="2">
@@ -321,11 +321,11 @@
         <table>
        <tr>
         <td>ID</td>
-        <td><input type="text" ng-model="editProdus.id"></td>
+        <td><input type="text" class="form-control" ng-model="editProdus.id"></td>
        </tr>
        <tr>
          <td>Name</td>
-         <td><input type="text" ng-model="editProdus.name"></td>
+         <td><input type="text" class="form-control" ng-model="editProdus.name"></td>
        </tr>
        <tr>
          <td colspan="2">
